[JVMCI] UseJVMCICompiler should imply EnableJVMCI

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • b16

        The behavior introduced by JDK-8161265 seems to have regressed.

        Expected:

        > java -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler foo
        Error: Could not find or load main class foo
        Caused by: java.lang.ClassNotFoundException: foo

        Actual:

        > java -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler foo
        Uncaught exception at /Users/dsimon/jdk-jdk/open/src/hotspot/share/jvmci/jvmciCompiler.cpp:138
        java.lang.NoClassDefFoundError: jdk/vm/ci/runtime/JVMCI

              Assignee:
              Dean Long
              Reporter:
              Douglas Simon
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: