8203370: [JVMCI] UseJVMCICompiler should imply EnableJVMCI

Reviewed-by: kvn